Correção de Pastas

--- a/ltd.html
+++ b/ltd.html
@@ -16,11 +16,11 @@
     <body>
         <main>
             <div class="fotos">
-                <img src="../assets/ltd/IMG_2340.jpg" alt="" />
-                <img src="../assets/ltd/IMG_2341.jpg" alt="" />
-                <img src="../assets/ltd/IMG_2342.jpg" alt="" />
-                <img src="../assets/ltd/IMG_2343.jpg" alt="" />
-                <img src="../assets/ltd/IMG_2344.jpg" alt="" />
+                <img src="./assets/ltd/IMG_2340.jpg" alt="" />
+                <img src="./assets/ltd/IMG_2341.jpg" alt="" />
+                <img src="./assets/ltd/IMG_2342.jpg" alt="" />
+                <img src="./assets/ltd/IMG_2343.jpg" alt="" />
+                <img src="./assets/ltd/IMG_2344.jpg" alt="" />
             </div>
             <div class="desc">
                 <h1>
