--- a/squier.html
+++ b/squier.html
@@ -15,11 +15,11 @@
 </head>
 <body>
     <div class="fotos">
-        <img src="../assets/squier/IMG_2330.jpg" alt="">
-        <img src="../assets/squier/IMG_2331.jpg" alt="">        
-        <img src="../assets/squier/IMG_2332.jpg" alt="">
-        <img src="../assets/squier/IMG_2333.jpg" alt="">
-        <img src="../assets/squier/IMG_2334.jpg" alt="">
+        <img src="./assets/squier/IMG_2330.jpg" alt="">
+        <img src="./assets/squier/IMG_2331.jpg" alt="">        
+        <img src="./assets/squier/IMG_2332.jpg" alt="">
+        <img src="./assets/squier/IMG_2333.jpg" alt="">
+        <img src="./assets/squier/IMG_2334.jpg" alt="">
     </div>
     <div class="desc">
         <h1>Guitarra Telecaster Squier Affinity. Recém revisada por luthier.</h1>
