Ajustes nas Páginas dos Itens

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
                 <div class="desc">
                     <h4>Amplificador Stanner Bold 60</h4>
                     <p>1100,00</p>
-                    <a href="./pages/amp-bass.html" target="_blank"><p>Mais Fotos</p></a>
+                    <a href="./amp-bass.html" target="_blank"
+                        ><p>Mais Fotos</p></a
+                    >
                 </div>
             </div>
             <div class="card">
@@ -41,7 +43,9 @@
                 <div class="desc">
                     <h4>Amplificador Valvulado Randall T2C</h4>
                     <p>4500,00</p>
-                    <a href="./pages/amp-guitar.html" target="_blank"><p>Mais Fotos</p></a>
+                    <a href="./amp-guitar.html" target="_blank"
+                        ><p>Mais Fotos</p></a
+                    >
                 </div>
             </div>
             <div class="card">
@@ -54,7 +58,7 @@
                 <div class="desc">
                     <h4>Baixo Tagima TBM5 5 cordas Captação Ativa</h4>
                     <p>1500,00</p>
-                    <a href="./pages/bass.html" target="_blank"><p>Mais Fotos</p></a>
+                    <a href="./bass.html" target="_blank"><p>Mais Fotos</p></a>
                 </div>
             </div>
             <div class="card">
@@ -67,7 +71,7 @@
                 <div class="desc">
                     <h4>Guitarra LTD MH50 com Floyd Rose</h4>
                     <p>1750,00</p>
-                    <a href="./pages/ltd.html" target="_blank"><p>Mais Fotos</p></a>
+                    <a href="./ltd.html" target="_blank"><p>Mais Fotos</p></a>
                 </div>
             </div>
             <div class="card">
@@ -80,7 +84,9 @@
                 <div class="desc">
                     <h4>Guitarra Telecaster Squier Affinity</h4>
                     <p>2050,00</p>
-                    <a href="./pages/squier.html" target="_blank"><p>Mais Fotos</p></a>
+                    <a href="./squier.html" target="_blank"
+                        ><p>Mais Fotos</p></a
+                    >
                 </div>
             </div>
         </div>
